--- a/package.json
+++ b/package.json
@@ -1,8 +1,9 @@
 {
-  "name": "node-starter",
+  "name": "stackblitz-jokko-recrutement",
+  "version": "1.0.0",
   "private": true,
   "scripts": {
-    "start": "echo \"node index.js"
+    "start": "node index.js"
   },
   "dependencies": {
     "express": "^5.2.1"
